solve the mozilla aligning problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -673,7 +673,7 @@ p {
   align-items: center;
 }
 .partners_container {
-  flex: 1 1 auto;
+  flex: 0 1 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -685,6 +685,7 @@ p {
   }
 }
 .partners_box {
+  flex: 1 1 25%;
   margin: 1rem 0;
   display: flex;
   flex-wrap: wrap;
